Add global plugin placeholder sdf which will be spawnned into the sim containing only plugins and a dummy link. Include prebuilt RGLLidar plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,32 @@ find_package(ament_cmake REQUIRED)
 find_package(gz-cmake3 REQUIRED)
 find_package(gz-sim8 REQUIRED)
 find_package(gz-plugin2 REQUIRED COMPONENTS register)
+find_package(xacro REQUIRED)
 
 set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
 include_directories(include include)
 
+set(PLACEHOLDER_XACRO_FILE ${CMAKE_CURRENT_SOURCE_DIR}/xacro/plugin_placeholder.xacro)
+set(GLOBAL_PLUGIN_XACRO ${CMAKE_CURRENT_SOURCE_DIR}/xacro/global_plugins.xacro)
+set(OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/plugin_placeholder.sdf)
 
-# Add new plugins here
+# Command to generate SDF from XACRO
+add_custom_command(
+    OUTPUT ${OUTPUT_FILE}
+    COMMAND xacro ${PLACEHOLDER_XACRO_FILE} -o ${OUTPUT_FILE}
+    DEPENDS ${PLACEHOLDER_XACRO_FILE} ${GLOBAL_PLUGIN_XACRO}
+    COMMENT "Generating placeholder sdf from Xacro"
+    VERBATIM
+)
+
+# Create a target that depends on the generated file
+add_custom_target(generate_sdf ALL DEPENDS ${OUTPUT_FILE})
+
+# Install the generated SDF
+install(FILES ${OUTPUT_FILE} DESTINATION share/${PROJECT_NAME}/plugin_placeholder_sdf)
+
+
+# Add new plugins here which need to be built
 add_library(MimicJoints SHARED src/MimicJoints.cc)
 set_property(TARGET MimicJoints PROPERTY CXX_STANDARD 17)
 target_link_libraries(MimicJoints
@@ -25,6 +45,25 @@ target_link_libraries(MimicJoints
 install(TARGETS MimicJoints
   LIBRARY DESTINATION plugins
 )
+
+# Add prebuilt plugin names here
+set(PREBPLUGINS
+  libRGLServerPluginInstance.so
+  libRGLServerPluginManager.so
+  libRGLVisualize.so
+  libRobotecGPULidar.so
+)
+
+foreach(PLUGIN ${PREBPLUGINS})
+  set(OUTPUT_FILE ${CMAKE_INSTALL_PREFIX}/plugins/${PLUGIN})
+  configure_file(${CMAKE_SOURCE_DIR}/prebuilt_plugins/${PLUGIN} ${OUTPUT_FILE} COPYONLY)
+endforeach()
+
+install(DIRECTORY
+  launch
+  xacro
+  DESTINATION share/${PROJECT_NAME})
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
