--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,8 @@
   <buildtool_depend>gz_sim_vendor</buildtool_depend>
   <buildtool_depend>gz_plugin_vendor</buildtool_depend>
 
+  <depend>rgl_gazebo_plugin</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
